# BelavadosProjects

BelavadosEffectStudio/: DEPLOY_TO_GITHUB_FIRST.txt  MOBILE_QUICKSTART.md  README.md  desktop.html  github-cache-reset.html  index.html  manifest.webmanifest  mobile.html  run_local_server_windows.bat  service-worker.js  sw.js
Onyx_Autonomous_Encounter_Suite/: README.md  encounters_minigame.html
character_studio/: README_MERGED_SCANNER_STUDIO.md  VOICE_STUDIO_MOVED_RESOURCE_MANIFEST.json  index.html  manifest.webmanifest  sw.js
character_studio/docs/voice-world/source-repositories/ThaiSpeechKit-main/: LICENSE  README.md  _source_doc_manifest.json  pyproject.toml  requirements.txt
data/: voice-humanization-derived.json
docs/: CHARACTER_STUDIO_RIGHT_MENU_CUTOFF_FIX_V3.md  LICENSES.md  MANIFEST.md  SCANNER_DOMINANT_STUDIO_MERGE.md  VOICE_STUDIO_README.md  baseaccent_005.url  baseaccent_006.url  baseaccent_010.url  resource-input-audit.json  srcdoc_0004.md  srcdoc_0022.md  srcdoc_0026.md  srcdoc_0027.md
json/: audio-reference-index.json  class-subclass-voice-overlays.json  deep-voice-runtime-index.json  dm02.json  dm03.json  dm11.json  dm13.json  dm17.json  dm19.json  dm20.json  dm22.json  dm23.json  scanner-default-profile.json  source-reference-index.json  speech-math-manifest.json  srcjson_0004.json  srcjson_0006.json  srcjson_0007.json  srcjson_0008.json  srcjson_0010.json  srcjson_0013.json  srcjson_0015.json
media/: accent_reference_manifest.json
voice_studio/: CHATGPT_EDITING_GUIDE.md  QUICK_START.md  README.md  RUN_LOCAL_SERVER_WINDOWS.bat  index.html  (+4 more)
(+1775 files in other folders)
